<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Main Activity -->
    <string name="app_name">HackWinds</string>
    <string name="video_name">Live Stream</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_forecast">Forecast</string>
    <string name="action_live">Live</string>
    <string name="action_buoy">Buoys</string>
    <string name="action_tide">Tide</string>
    <string name="action_pics">Still Camera</string>
    <string name="action_alt_cameras">Cameras</string>
    <string name="action_buoy_history">Buoy History</string>

    <!-- Overview Page -->
    <string name="break_header">Waves</string>
    <string name="swell_header">Swell</string>
    <string name="wind_header">Wind</string>
    <string name="tide_header">Tide</string>
    <string name="data_header">Data</string>
    <string name="time_header">Time</string>

    <!-- Forecast Page -->
    <string name="header_forecast">Swell Forecast</string>
    <string name="today_header">Today</string>
    <string name="tomorrow_header">Tomorrow</string>
    <string name="next_day_header">The Next Day</string>
    <string name="morning_header">Morning</string>
    <string name="afternoon_header">Afternoon</string>
    <string name="loading_text">Loading...</string>
    <string name="action_model_forecast">View Model</string>

    <!-- Buoy Page -->
    <string name="latest_buoy_card_title">Latest Buoy Data</string>
    <string name="buoy_component_header">Components</string>
    <string name="directional_spectra_plot_title">Directional Wave Spectra</string>
    <string name="energy_spectra_plot_title">Wave Energy Distribution</string>

    <!-- Tide Page -->
    <string name="low_tide">Low Tide</string>
    <string name="high_tide">High Tide</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="tide_event_holder">Tide Event</string>
    <string name="current_tide_header">Right Now</string>
    <string name="upcoming_tide_header">Upcoming Tides</string>
    <string name="sun_tide_header">Other Upcoming Events</string>
    <string name="tide_time_holder">00:00</string>
    <string name="water_temp_header">Water Temperature</string>
    <string name="bi_water_temp_location">Block Island</string>
    <string name="water_temp_holder">&#xb0;F</string>
    <string name="action_tide_schedule">Tide Schedule</string>

    <!-- Settings Page -->
    <string name="title_activity_settings">Settings</string>
    <string name="pref_about_title">About</string>
    <string name="pref_email_title">Email Me</string>
    <string name="pref_about_app_summary">Version 1.0, July 2014</string>
    <string name="pref_contact_title">Contact</string>
    <string name="pref_contact_email">rhodysurf13@gmail.com</string>
    <string name="pref_disclaimer_title">Disclaimer</string>
    <string name="pref_disclaimer_summary">Click to view</string>
    <string name="pref_disclaimer_message">I do not own the images displayed or the forecast data, nor do I claim to.</string>
    <string name="pref_forecast_location_group_title">Forecast Location</string>
    <string name="pref_change_forecast_title">Change Forecast Location</string>
    <string name="pref_user_interface_group_title">User Interface</string>
    <string name="pref_change_default_buoy_title">Change Default Buoy Location</string>
    <string name="pref_review_title">Review on Google Play</string>
    <string name="pref_review_summary">If you like the app, please give it a good review on Google Play</string>
    <string name="discalimer_message">I do not own or claim to own neither the wave camera images or
        the tide information displayed in this app. This app is simply an interface to make checking
        the waves easier for surfers when using a phone. I am specifically operating within the user licensing
        for the Wunderground and WarmWinds API\'s.</string>
    <string name="pref_activate_premium_title">Activate Premium Content</string>
    <string name="pref_buoy_location_summary">Current location</string>
    <string name="pref_premium_content_summary_disabled">Enter code to activate</string>
    <string name="pref_premium_content_summary_enabled">Premium content enabled</string>
    <string name="pref_premium_code_input_hint">Enter code</string>

    <!-- Detailed Forecast activity -->
    <string name="title_activity_detailed_forecast">Detailed Forecast</string>
    <string name="detailed_forecast_toolbar_title_holder">Weekday</string>
    <string name="swell_chart_segment">Swell</string>
    <string name="wind_chart_segment">Wind</string>
    <string name="period_chart_segment">Period</string>

    <!-- Alternate cameras activity -->
    <string name="title_activity_alternate_cameras">Cameras</string>
    <string name="auto_refresh_label">Auto Refresh</string>
    <string name="auto_refresh_frequency">Refresh interval is 3 seconds</string>
    <string name="video_info_holder">Video info loading...</string>

    <!-- Video player activity -->
    <string name="title_activity_video_player">Video Player</string>

    <!-- Buoy History activity -->
    <string name="title_activity_buoy_history">Buoy History</string>
    <string name="buoy_summary_mode_segment_title">Summary</string>
    <string name="buoy_swell_mode_segment_title">Swell</string>
    <string name="buoy_wind_mode_segment_title">Wind Wave</string>

    <!-- Tide Schedule activity -->
    <string name="title_activity_tide_schedule">Tide Schedule</string>

    <!-- WaveWatch Charts activity -->
    <string name="title_activity_wavewatch_chart">NOAA Wave Watch III</string>
    <string name="wavewatch_wave_height_title">Waves</string>
    <string name="wavewatch_swell_title">Swell</string>
    <string name="wavewatch_period_title">Period</string>
    <string name="wavewatch_wind_title">Wind</string>
    <string name="wavewatch_animation_speed_title">Animation Speed</string>
    <string name="wavewatch_manual_control_title">Manual Control</string>

    <!-- Model Info Dialog Fragment -->
    <string name="title_model_info_fragment">Rhode Island Surf Forecast</string>

    <!-- Buoy Picker Dialog Fragment -->
    <string name="title_buoy_picker_fragment">Change Buoy Location</string>

    <!-- Misc Strings -->
    <string name="detailed_forecast_item_swell_text">Swell:</string>

    <!-- Buoy Location Strings -->
    <string name="block_island_location">Block Island</string>
    <string name="montauk_location">Montauk</string>
    <string name="nantucket_location">Nantucket</string>
    <string name="long_island_location">Long Island</string>
    <string name="texas_tower_location">Texas Tower</string>

</resources>
