<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_forecast_location_group_title" >
        <ListPreference
            android:title="Current Location"
            android:summary="@string/pref_change_forecast_summary"
            android:key="forecastLocation"
            android:entries="@array/forecastLocations"
            android:entryValues="@array/forecastLocations" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_about_title">
        <Preference
            android:title="@string/pref_review_title"
            android:summary="@string/pref_review_summary"
            android:key="rateApp" />
        <Preference
            android:title="@string/pref_contact_title"
            android:summary="@string/pref_contact_email"
            android:key="contactDeveloper"/>
        <Preference
            android:title="@string/pref_disclaimer_title"
            android:summary="@string/pref_disclaimer_summary"
            android:key="aboutDisclaimer" />
    </PreferenceCategory>

</PreferenceScreen>