<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/abc_dialog_list_padding_vertical_material"
    android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"
    android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"
    android:paddingTop="@dimen/abc_dialog_list_padding_vertical_material">

    <TextView
        android:id="@+id/buoy_picker_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_buoy_picker_fragment"
        android:layout_marginBottom="@dimen/card_header_bottom_margin"
        style="@style/DetailedForecastItemHeaderText"/>

    <RadioGroup
        android:id="@+id/buoy_location_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/card_header_bottom_margin"
        style="@style/WaveWatchOptionText">

        <RadioButton
            android:id="@+id/block_island_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_header_bottom_margin"
            android:text="@string/block_island_location"
            style="@style/WaveWatchOptionText"/>

        <RadioButton
            android:id="@+id/montauk_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_header_bottom_margin"
            android:text="@string/montauk_location"
            style="@style/WaveWatchOptionText"/>

        <RadioButton
            android:id="@+id/nantucket_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_header_bottom_margin"
            android:text="@string/nantucket_location"
            style="@style/WaveWatchOptionText"/>

        <RadioButton
            android:id="@+id/texas_tower_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_header_bottom_margin"
            android:text="@string/texas_tower_location"
            style="@style/WaveWatchOptionText"/>

    </RadioGroup>


</LinearLayout>