<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="6dp"
    android:layout_marginRight="6dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp" >

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:orientation="horizontal"
            android:layout_weight="1"  >

            <TextView
                android:id="@+id/timeData"
                android:layout_gravity="left|center_vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/DataHeaderText"
                android:text="@string/time_header"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/breakHeader"
                android:layout_gravity="left|center_vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/DataHeaderText"
                android:text="@string/break_header"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/windHeader"
                android:layout_gravity="left|center_vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/DataHeaderText"
                android:text="@string/wind_header"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/swellHeader"
                android:layout_gravity="left|center_vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/DataHeaderText"
                android:text="@string/swell_header"
                android:layout_weight="0.8" />

        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/forcDialogList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:divider="@color/ltgrey"
        android:dividerHeight="1dp" />

</LinearLayout>