<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nucc.hackwinds.DetailedForecastFragment">

    <info.hoang8f.android.segmented.SegmentedGroup
        android:id="@+id/segmentedChart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/swellSegmentButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/swell_chart_segment"
            android:layout_weight="1"
            style="@style/RadioButton" />

        <RadioButton
            android:id="@+id/windSegmentButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wind_chart_segment"
            style="@style/RadioButton" />

        <RadioButton
            android:id="@+id/periodSegmentButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/period_chart_segment"
            style="@style/RadioButton" />
    </info.hoang8f.android.segmented.SegmentedGroup>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/light_grey">

        <ImageView
            android:id="@+id/chartPreviewImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/animatePlayButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_av_play_over_video_big"
            android:layout_gravity="center_horizontal|center_vertical" />

    </FrameLayout>


</FrameLayout>
