<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/upcomingTideHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upcoming_tide_header"
                android:textColor="@color/numix_grey"
                android:layout_gravity="start|center_vertical"
                style="@style/DataHeaderText" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/light_grey"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/upcomingTideType1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tide_event_holder"
                    android:layout_weight="1.5"
                    android:gravity="start"
                    android:layout_gravity="start|center_vertical"
                    style="@style/ForecastDataText" />

                <TextView
                    android:id="@+id/upcomingTideTime1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tide_time_holder"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:layout_gravity="start|center_vertical"
                    style="@style/TideDescriptionText" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/upcomingTideType2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tide_event_holder"
                    android:layout_weight="1.5"
                    android:gravity="start"
                    android:layout_gravity="start|center_vertical"
                    style="@style/ForecastDataText" />

                <TextView
                    android:id="@+id/upcomingTideTime2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tide_time_holder"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:layout_gravity="start|center_vertical"
                    style="@style/TideDescriptionText" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/upcomingTideType3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tide_event_holder"
                    android:layout_weight="1.5"
                    android:gravity="start"
                    android:layout_gravity="start|center_vertical"
                    style="@style/ForecastDataText" />

                <TextView
                    android:id="@+id/upcomingTideTime3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tide_time_holder"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:layout_gravity="start|center_vertical"
                    style="@style/TideDescriptionText" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/upcomingTideType4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tide_event_holder"
                    android:layout_weight="1.5"
                    android:gravity="start"
                    android:layout_gravity="start|center_vertical"
                    style="@style/ForecastDataText" />

                <TextView
                    android:id="@+id/upcomingTideTime4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tide_time_holder"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:layout_gravity="start|center_vertical"
                    style="@style/TideDescriptionText" />

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>
